--- a/Data-Structures-and-Algorithms/CMakeLists.txt
+++ b/Data-Structures-and-Algorithms/CMakeLists.txt
@@ -35,3 +35,4 @@ message(STATUS "Boost_LIB_DIAGNOSTIC_DEFINITIONS: ${Boost_LIB_DIAGNOSTIC_DEFINIT
 
 ### Graph
 add_subdirectory(graph/DFS)
+add_subdirectory(geeksforgeeks)
