--- a/boost.asio/network-programming/CMakeLists.txt
+++ b/boost.asio/network-programming/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_executable(network-programming main.cpp "started_asio.hpp")
+add_executable(network-programming main.cpp "started_asio.hpp" "tcp.hpp")
 target_include_directories(network-programming PRIVATE ${Boost_INCLUDE_DIRS})
 target_link_libraries(network-programming PRIVATE ${Boost_LIBRARIES})
