--- a/boost.asio/CMakeLists.txt
+++ b/boost.asio/CMakeLists.txt
@@ -54,6 +54,7 @@ add_subdirectory(chapter01/accept-connection)
 ### Chapter 02
 add_subdirectory(chapter02)
 add_subdirectory(chapter03)
+add_subdirectory(chapter04)
 
 # Network programming
 add_subdirectory(network-programming)
