install openssl ssl client

--- a/boost.asio/CMakeLists.txt
+++ b/boost.asio/CMakeLists.txt
@@ -33,6 +33,21 @@ message(STATUS "Boost_MINOR_VERSION: ${Boost_MINOR_VERSION}")
 message(STATUS "Boost_SUBMINOR_VERSION: ${Boost_SUBMINOR_VERSION}")
 message(STATUS "Boost_LIB_DIAGNOSTIC_DEFINITIONS: ${Boost_LIB_DIAGNOSTIC_DEFINITIONS}")
 
+# OpenSSL
+set(OPENSSL_ROOT_DIR "C:/openssl")
+set(OPENSSL_USE_STATIC_LIBS ON)
+set(OPENSSL_MSVC_STATIC_RT ON)
+find_package(OpenSSL 1.1.1)
+message(STATUS "OPENSSL_FOUND: ${OPENSSL_FOUND}")
+if(NOT OPENSSL_FOUND)
+	message(FATAL_ERROR "Not found OpenSSL 1.1.1")
+endif()
+message(STATUS "OPENSSL_VERSION: ${OPENSSL_VERSION}")
+message(STATUS "OPENSSL_INCLUDE_DIR: ${OPENSSL_INCLUDE_DIR}")
+message(STATUS "OPENSSL_CRYPTO_LIBRARY: ${OPENSSL_CRYPTO_LIBRARY}")
+message(STATUS "OPENSSL_SSL_LIBRARY: ${OPENSSL_SSL_LIBRARY}")
+message(STATUS "OPENSSL_LIBRARIES: ${OPENSSL_LIBRARIES}")
+
 ### Chapter 01
 # 1. create endpoint
 add_subdirectory(chapter01/create-endpoint)
