--- a/boost.asio/CMakeLists.txt
+++ b/boost.asio/CMakeLists.txt
@@ -81,3 +81,4 @@ add_subdirectory(boostorg/allocation)
 add_subdirectory(boostorg/buffer)
 add_subdirectory(boostorg/chat)
 add_subdirectory(boostorg/echo)
+add_subdirectory(boostorg/futures)
