--- a/boost.asio/CMakeLists.txt
+++ b/boost.asio/CMakeLists.txt
@@ -82,3 +82,4 @@ add_subdirectory(boostorg/buffer)
 add_subdirectory(boostorg/chat)
 add_subdirectory(boostorg/echo)
 add_subdirectory(boostorg/futures)
+add_subdirectory(boostorg/tracking)
