--- a/boost.asio/CMakeLists.txt
+++ b/boost.asio/CMakeLists.txt
@@ -83,3 +83,4 @@ add_subdirectory(boostorg/chat)
 add_subdirectory(boostorg/echo)
 add_subdirectory(boostorg/futures)
 add_subdirectory(boostorg/tracking)
+add_subdirectory(boostorg/httpserver)
