--- a/boost.asio/CMakeLists.txt
+++ b/boost.asio/CMakeLists.txt
@@ -84,3 +84,4 @@ add_subdirectory(boostorg/echo)
 add_subdirectory(boostorg/futures)
 add_subdirectory(boostorg/tracking)
 add_subdirectory(boostorg/httpserver)
+add_subdirectory(boostorg/multicast)
