--- a/boost.asio/CMakeLists.txt
+++ b/boost.asio/CMakeLists.txt
@@ -85,3 +85,4 @@ add_subdirectory(boostorg/futures)
 add_subdirectory(boostorg/tracking)
 add_subdirectory(boostorg/httpserver)
 add_subdirectory(boostorg/multicast)
+add_subdirectory(boostorg/nonblocking)
