--- a/boost.asio/CMakeLists.txt
+++ b/boost.asio/CMakeLists.txt
@@ -87,3 +87,4 @@ add_subdirectory(boostorg/httpserver)
 add_subdirectory(boostorg/multicast)
 add_subdirectory(boostorg/nonblocking)
 add_subdirectory(boostorg/spawn)
+add_subdirectory(boostorg/ssl)
