--- a/boost.asio/CMakeLists.txt
+++ b/boost.asio/CMakeLists.txt
@@ -88,3 +88,4 @@ add_subdirectory(boostorg/multicast)
 add_subdirectory(boostorg/nonblocking)
 add_subdirectory(boostorg/spawn)
 add_subdirectory(boostorg/ssl)
+add_subdirectory(boostorg/timeouts)
