--- a/boost.asio/CMakeLists.txt
+++ b/boost.asio/CMakeLists.txt
@@ -89,3 +89,4 @@ add_subdirectory(boostorg/nonblocking)
 add_subdirectory(boostorg/spawn)
 add_subdirectory(boostorg/ssl)
 add_subdirectory(boostorg/timeouts)
+add_subdirectory(boostorg/timer)
