--- a/boost.asio/CMakeLists.txt
+++ b/boost.asio/CMakeLists.txt
@@ -90,3 +90,4 @@ add_subdirectory(boostorg/spawn)
 add_subdirectory(boostorg/ssl)
 add_subdirectory(boostorg/timeouts)
 add_subdirectory(boostorg/timer)
+#add_subdirectory(boostorg/unix_domain_socket)
