fastest way to read file by boost.interprocess

--- a/boost.asio/CMakeLists.txt
+++ b/boost.asio/CMakeLists.txt
@@ -94,3 +94,6 @@ add_subdirectory(boostorg/timer)
 
 # Boost.Beast
 add_subdirectory(boostorg/beast)
+
+# Boost good example
+add_subdirectory(boost-good-example/fastest-way-read-file)
