--- a/zeromq/CMakeLists.txt
+++ b/zeromq/CMakeLists.txt
@@ -17,3 +17,5 @@ set(WINDOWS_LIBRARIES "Ws2_32.lib;IPHLPAPI.lib")
 add_subdirectory(basic/hello-world)
 add_subdirectory(basic/weather-station)
 add_subdirectory(basic/parallel-task)
+add_subdirectory(socket-and-pattern/multiple-sockets)
+add_subdirectory(socket-and-pattern/router-dealer)
