--- a/zeromq/socket-and-pattern/router-dealer/CMakeLists.txt
+++ b/zeromq/socket-and-pattern/router-dealer/CMakeLists.txt
@@ -15,3 +15,8 @@ target_link_libraries(rrworker PRIVATE ${ZERO_MQ_LIBRARIES} ${WINDOWS_LIBRARIES}
 add_executable(rrbroker rrbroker.cpp)
 target_include_directories(rrbroker PRIVATE ${ZERO_MQ_INCLUDEDIR} ${CPP_ZMQ_INCLUDEDIR})
 target_link_libraries(rrbroker PRIVATE ${ZERO_MQ_LIBRARIES} ${WINDOWS_LIBRARIES})
+
+# message queue
+add_executable(msgqueue msgqueue.cpp)
+target_include_directories(msgqueue PRIVATE ${ZERO_MQ_INCLUDEDIR} ${CPP_ZMQ_INCLUDEDIR})
+target_link_libraries(msgqueue PRIVATE ${ZERO_MQ_LIBRARIES} ${WINDOWS_LIBRARIES})
