--- a/zeromq/CMakeLists.txt
+++ b/zeromq/CMakeLists.txt
@@ -19,3 +19,4 @@ add_subdirectory(1-basic/weather-station)
 add_subdirectory(1-basic/parallel-task)
 add_subdirectory(2-socket-and-pattern/multiple-sockets)
 add_subdirectory(2-socket-and-pattern/router-dealer)
+add_subdirectory(2-socket-and-pattern/handling-interrupt-signals)
