Signaling Between Threads (PAIR Sockets)

--- a/zeromq/CMakeLists.txt
+++ b/zeromq/CMakeLists.txt
@@ -20,3 +20,5 @@ add_subdirectory(1-basic/parallel-task)
 add_subdirectory(2-socket-and-pattern/multiple-sockets)
 add_subdirectory(2-socket-and-pattern/router-dealer)
 add_subdirectory(2-socket-and-pattern/handling-interrupt-signals)
+add_subdirectory(2-socket-and-pattern/multithreading)
+add_subdirectory(2-socket-and-pattern/signal-between-thread)
