--- a/zeromq/CMakeLists.txt
+++ b/zeromq/CMakeLists.txt
@@ -22,3 +22,4 @@ add_subdirectory(2-socket-and-pattern/router-dealer)
 add_subdirectory(2-socket-and-pattern/handling-interrupt-signals)
 add_subdirectory(2-socket-and-pattern/multithreading)
 add_subdirectory(2-socket-and-pattern/signal-between-thread)
+add_subdirectory(2-socket-and-pattern/node-coordination)
