--- a/zeromq/CMakeLists.txt
+++ b/zeromq/CMakeLists.txt
@@ -23,3 +23,4 @@ add_subdirectory(2-socket-and-pattern/handling-interrupt-signals)
 add_subdirectory(2-socket-and-pattern/multithreading)
 add_subdirectory(2-socket-and-pattern/signal-between-thread)
 add_subdirectory(2-socket-and-pattern/node-coordination)
+add_subdirectory(2-socket-and-pattern/pub-sub-message-envelope)
