configuration using saigonlib

--- a/zeromq/1-basic/parallel-task/CMakeLists.txt
+++ b/zeromq/1-basic/parallel-task/CMakeLists.txt
@@ -3,15 +3,15 @@ add_compile_definitions(ZMQ_STATIC) ## or #define ZMQ_STATIC beofre include zmq.
 
 # taskevent
 add_executable(taskevent taskevent.cpp)
-target_include_directories(taskevent PRIVATE ${ZERO_MQ_INCLUDEDIR} ${CPP_ZMQ_INCLUDEDIR})
-target_link_libraries(taskevent PRIVATE ${ZERO_MQ_LIBRARIES} ${WINDOWS_LIBRARIES})
+target_include_directories(taskevent PRIVATE ${SGLIB_INCLUDEDIR})
+target_link_libraries(taskevent PRIVATE ${WINDOWS_LIBRARIES} ${SGLIB_LIBRARIES})
 
 # taskwork
 add_executable(taskwork taskwork.cpp)
-target_include_directories(taskwork PRIVATE ${ZERO_MQ_INCLUDEDIR} ${CPP_ZMQ_INCLUDEDIR})
-target_link_libraries(taskwork PRIVATE ${ZERO_MQ_LIBRARIES} ${WINDOWS_LIBRARIES})
+target_include_directories(taskwork PRIVATE ${SGLIB_INCLUDEDIR})
+target_link_libraries(taskwork PRIVATE ${WINDOWS_LIBRARIES} ${SGLIB_LIBRARIES})
 
 # taskwork
 add_executable(tasksink tasksink.cpp)
-target_include_directories(tasksink PRIVATE ${ZERO_MQ_INCLUDEDIR} ${CPP_ZMQ_INCLUDEDIR})
-target_link_libraries(tasksink PRIVATE ${ZERO_MQ_LIBRARIES} ${WINDOWS_LIBRARIES})
+target_include_directories(tasksink PRIVATE ${SGLIB_INCLUDEDIR})
+target_link_libraries(tasksink PRIVATE ${WINDOWS_LIBRARIES} ${SGLIB_LIBRARIES})
