--- a/zeromq/2-socket-and-pattern/multithreading/CMakeLists.txt
+++ b/zeromq/2-socket-and-pattern/multithreading/CMakeLists.txt
@@ -3,5 +3,5 @@ add_compile_definitions(ZMQ_STATIC) ## or #define ZMQ_STATIC beofre include zmq.
 
 # server
 add_executable(mtserver mtserver.cpp)
-target_include_directories(mtserver PRIVATE ${ZERO_MQ_INCLUDEDIR} ${CPP_ZMQ_INCLUDEDIR})
-target_link_libraries(mtserver PRIVATE ${ZERO_MQ_LIBRARIES} ${WINDOWS_LIBRARIES})
+target_include_directories(mtserver PRIVATE ${SGLIB_INCLUDEDIR})
+target_link_libraries(mtserver PRIVATE ${WINDOWS_LIBRARIES} ${SGLIB_LIBRARIES})
