--- a/zeromq/2-socket-and-pattern/pub-sub-message-envelope/CMakeLists.txt
+++ b/zeromq/2-socket-and-pattern/pub-sub-message-envelope/CMakeLists.txt
@@ -6,9 +6,9 @@ add_compile_definitions(ZMQ_STATIC) ## or #define ZMQ_STATIC beofre include zmq.
 # server
 add_executable(psenvpub psenvpub.cpp)
 target_include_directories(psenvpub PRIVATE ${SGLIB_INCLUDEDIR})
-target_link_libraries(psenvpub PRIVATE ${ZERO_MQ_LIBRARIES} ${WINDOWS_LIBRARIES} ${SGLIB_LIBRARIES})
+target_link_libraries(psenvpub PRIVATE ${WINDOWS_LIBRARIES} ${SGLIB_LIBRARIES})
 
 # client
 add_executable(psenvsub psenvsub.cpp)
 target_include_directories(psenvsub PRIVATE ${SGLIB_INCLUDEDIR})
-target_link_libraries(psenvsub PRIVATE ${ZERO_MQ_LIBRARIES} ${WINDOWS_LIBRARIES} ${SGLIB_LIBRARIES})
+target_link_libraries(psenvsub PRIVATE ${WINDOWS_LIBRARIES} ${SGLIB_LIBRARIES})
