--- a/zeromq/2-socket-and-pattern/signal-between-thread/CMakeLists.txt
+++ b/zeromq/2-socket-and-pattern/signal-between-thread/CMakeLists.txt
@@ -3,5 +3,5 @@ add_compile_definitions(ZMQ_STATIC) ## or #define ZMQ_STATIC beofre include zmq.
 
 # client
 add_executable(mtreply "mtreply.cpp")
-target_include_directories(mtreply PRIVATE ${ZERO_MQ_INCLUDEDIR} ${CPP_ZMQ_INCLUDEDIR})
-target_link_libraries(mtreply PRIVATE ${ZERO_MQ_LIBRARIES} ${WINDOWS_LIBRARIES})
+target_include_directories(mtreply PRIVATE ${SGLIB_INCLUDEDIR})
+target_link_libraries(mtreply PRIVATE ${WINDOWS_LIBRARIES} ${SGLIB_LIBRARIES})
