--- a/zeromq/1-basic/hello-world/CMakeLists.txt
+++ b/zeromq/1-basic/hello-world/CMakeLists.txt
@@ -3,10 +3,10 @@ add_compile_definitions(ZMQ_STATIC) ## or #define ZMQ_STATIC beofre include zmq.
 
 # server
 add_executable(hwserver server.cpp)
-target_include_directories(hwserver PRIVATE ${ZERO_MQ_INCLUDEDIR} ${CPP_ZMQ_INCLUDEDIR})
-target_link_libraries(hwserver PRIVATE ${ZERO_MQ_LIBRARIES} ${WINDOWS_LIBRARIES})
+target_include_directories(hwserver PRIVATE ${SGLIB_INCLUDEDIR})
+target_link_libraries(hwserver PRIVATE ${WINDOWS_LIBRARIES} ${SGLIB_LIBRARIES})
 
 # client
 add_executable(hwclient "client.cpp")
-target_include_directories(hwclient PRIVATE ${ZERO_MQ_INCLUDEDIR} ${CPP_ZMQ_INCLUDEDIR})
-target_link_libraries(hwclient PRIVATE ${ZERO_MQ_LIBRARIES} ${WINDOWS_LIBRARIES})
+target_include_directories(hwclient PRIVATE ${SGLIB_INCLUDEDIR})
+target_link_libraries(hwclient PRIVATE ${WINDOWS_LIBRARIES} ${SGLIB_LIBRARIES})
