--- a/zeromq/2-socket-and-pattern/handling-interrupt-signals/CMakeLists.txt
+++ b/zeromq/2-socket-and-pattern/handling-interrupt-signals/CMakeLists.txt
@@ -3,10 +3,10 @@ add_compile_definitions(ZMQ_STATIC) ## or #define ZMQ_STATIC beofre include zmq.
 
 # taskwork
 add_executable(taskwork2 taskwork2.cpp)
-target_include_directories(taskwork2 PRIVATE ${ZERO_MQ_INCLUDEDIR} ${CPP_ZMQ_INCLUDEDIR})
-target_link_libraries(taskwork2 PRIVATE ${ZERO_MQ_LIBRARIES} ${WINDOWS_LIBRARIES})
+target_include_directories(taskwork2 PRIVATE ${SGLIB_INCLUDEDIR})
+target_link_libraries(taskwork2 PRIVATE ${WINDOWS_LIBRARIES} ${SGLIB_LIBRARIES})
 
 # tasksink
 add_executable(tasksink2 "tasksink2.cpp")
-target_include_directories(tasksink2 PRIVATE ${ZERO_MQ_INCLUDEDIR} ${CPP_ZMQ_INCLUDEDIR})
-target_link_libraries(tasksink2 PRIVATE ${ZERO_MQ_LIBRARIES} ${WINDOWS_LIBRARIES})
+target_include_directories(tasksink2 PRIVATE ${SGLIB_INCLUDEDIR})
+target_link_libraries(tasksink2 PRIVATE ${WINDOWS_LIBRARIES} ${SGLIB_LIBRARIES})
