--- a/zeromq/2-socket-and-pattern/multiple-sockets/CMakeLists.txt
+++ b/zeromq/2-socket-and-pattern/multiple-sockets/CMakeLists.txt
@@ -3,9 +3,9 @@ add_compile_definitions(ZMQ_STATIC) ## or #define ZMQ_STATIC beofre include zmq.
 
 # server
 add_executable(msreader msreader.cpp)
-target_include_directories(msreader PRIVATE ${ZERO_MQ_INCLUDEDIR} ${CPP_ZMQ_INCLUDEDIR})
-target_link_libraries(msreader PRIVATE ${ZERO_MQ_LIBRARIES} ${WINDOWS_LIBRARIES})
+target_include_directories(msreader PRIVATE ${SGLIB_INCLUDEDIR})
+target_link_libraries(msreader PRIVATE ${WINDOWS_LIBRARIES} ${SGLIB_LIBRARIES})
 
 add_executable(mspoller mspoller.cpp)
-target_include_directories(mspoller PRIVATE ${ZERO_MQ_INCLUDEDIR} ${CPP_ZMQ_INCLUDEDIR})
-target_link_libraries(mspoller PRIVATE ${ZERO_MQ_LIBRARIES} ${WINDOWS_LIBRARIES})
+target_include_directories(mspoller PRIVATE ${SGLIB_INCLUDEDIR})
+target_link_libraries(mspoller PRIVATE ${WINDOWS_LIBRARIES} ${SGLIB_LIBRARIES})
