identity and load balancing

--- a/zeromq/CMakeLists.txt
+++ b/zeromq/CMakeLists.txt
@@ -57,3 +57,5 @@ add_subdirectory(2-socket-and-pattern/multithreading)
 add_subdirectory(2-socket-and-pattern/signal-between-thread)
 add_subdirectory(2-socket-and-pattern/node-coordination)
 add_subdirectory(2-socket-and-pattern/pub-sub-message-envelope)
+add_subdirectory(3-advanced-request-reply-patterns/identity)
+add_subdirectory(3-advanced-request-reply-patterns/load-balancing-pattern)
