--- a/zeromq/CMakeLists.txt
+++ b/zeromq/CMakeLists.txt
@@ -59,3 +59,4 @@ add_subdirectory(2-socket-and-pattern/node-coordination)
 add_subdirectory(2-socket-and-pattern/pub-sub-message-envelope)
 add_subdirectory(3-advanced-request-reply-patterns/identity)
 add_subdirectory(3-advanced-request-reply-patterns/load-balancing-pattern)
+add_subdirectory(3-advanced-request-reply-patterns/asynchronous)
