prototype the local and cloud flow

--- a/zeromq/CMakeLists.txt
+++ b/zeromq/CMakeLists.txt
@@ -60,3 +60,4 @@ add_subdirectory(2-socket-and-pattern/pub-sub-message-envelope)
 add_subdirectory(3-advanced-request-reply-patterns/identity)
 add_subdirectory(3-advanced-request-reply-patterns/load-balancing-pattern)
 add_subdirectory(3-advanced-request-reply-patterns/asynchronous)
+add_subdirectory(3-advanced-request-reply-patterns/inter-broker-routing)
