--- a/zeromq/4. Reliable Request-Reply Patterns/4.1 Lazy Pirate Pattern/CMakelists.txt
+++ b/zeromq/4. Reliable Request-Reply Patterns/4.1 Lazy Pirate Pattern/CMakelists.txt
@@ -11,12 +11,22 @@ add_executable(lpserver "lpserver.cpp")
 target_include_directories(lpserver PRIVATE ${SGLIB_INCLUDEDIR})
 target_link_libraries(lpserver PRIVATE ${WINDOWS_LIBRARIES} ${SGLIB_LIBRARIES})
 
-# simple pirate pattern : server
+## simple pirate pattern : server
 add_executable(spqueue "spqueue.cpp")
 target_include_directories(spqueue PRIVATE ${SGLIB_INCLUDEDIR})
 target_link_libraries(spqueue PRIVATE ${WINDOWS_LIBRARIES} ${SGLIB_LIBRARIES})
 
-# simple pirate pattern: server-worker
+## simple pirate pattern: server-worker
 add_executable(spworker "spworker.cpp")
 target_include_directories(spworker PRIVATE ${SGLIB_INCLUDEDIR})
 target_link_libraries(spworker PRIVATE ${WINDOWS_LIBRARIES} ${SGLIB_LIBRARIES})
+
+## Paranoid Pirate Pattern : queue
+add_executable(ppqueue "ppqueue.cpp")
+target_include_directories(ppqueue PRIVATE ${SGLIB_INCLUDEDIR})
+target_link_libraries(ppqueue PRIVATE ${WINDOWS_LIBRARIES} ${SGLIB_LIBRARIES})
+
+## Paranoid Pirate Pattern : worker
+add_executable(ppworker "ppworker.cpp")
+target_include_directories(ppworker PRIVATE ${SGLIB_INCLUDEDIR})
+target_link_libraries(ppworker PRIVATE ${WINDOWS_LIBRARIES} ${SGLIB_LIBRARIES})
