--- a/zeromq/CMakeLists.txt
+++ b/zeromq/CMakeLists.txt
@@ -64,3 +64,4 @@ add_subdirectory(3-advanced-request-reply-patterns/inter-broker-routing)
 add_subdirectory("4. Reliable Request-Reply Patterns/4.1 Lazy Pirate Pattern")
 add_subdirectory("4. Reliable Request-Reply Patterns/4.3 Majordomo Pattern")
 add_subdirectory("4. Reliable Request-Reply Patterns/4.3.1 Majordomo Pattern")
+add_subdirectory("4. Reliable Request-Reply Patterns/4.4 Asynchronous Majordomo Pattern")
