--- a/zeromq/CMakeLists.txt
+++ b/zeromq/CMakeLists.txt
@@ -65,3 +65,4 @@ add_subdirectory("4. Reliable Request-Reply Patterns/4.1 Lazy Pirate Pattern")
 add_subdirectory("4. Reliable Request-Reply Patterns/4.3 Majordomo Pattern")
 add_subdirectory("4. Reliable Request-Reply Patterns/4.3.1 Majordomo Pattern")
 add_subdirectory("4. Reliable Request-Reply Patterns/4.4 Asynchronous Majordomo Pattern")
+add_subdirectory("4. Reliable Request-Reply Patterns/4.5 Service Discovery")
