--- a/zeromq/CMakeLists.txt
+++ b/zeromq/CMakeLists.txt
@@ -17,6 +17,33 @@ SET(VLD_NAME "vld")
 set(WINDOWS_LIBRARIES "Ws2_32.lib;IPHLPAPI.lib")
 set(SGLIB_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/../../saigonlib")
 
+## Boost library
+set(BOOST_ROOT "${SGLIB_ROOT}/boost_1_74_0")
+set(BOOST_INCLUDEDIR "${BOOST_ROOT}")
+set(BOOST_LIBRARYDIR "${BOOST_ROOT}/stage/lib")
+set(Boost_NO_SYSTEM_PATHS ON)
+set(Boost_USE_STATIC_LIBS        ON)  # only find static libs
+set(Boost_USE_DEBUG_LIBS         ON)  # ignore debug libs and
+set(Boost_USE_RELEASE_LIBS       ON)  # only find release libs
+set(Boost_USE_MULTITHREADED      ON)
+set(Boost_USE_STATIC_RUNTIME    OFF)
+# Note boost 1.75.0 error
+find_package(Boost 1.74.0 REQUIRED COMPONENTS date_time regex thread filesystem context coroutine)
+if(NOT Boost_FOUND)
+	message(FATAL_ERROR "Not found Boost version 1.74.0")
+endif()
+
+# Result
+message(STATUS "Boost_INCLUDE_DIRS: ${Boost_INCLUDE_DIRS}")
+message(STATUS "Boost_LIBRARY_DIRS: ${Boost_LIBRARY_DIRS}")
+message(STATUS "Boost_LIBRARIES: ${Boost_LIBRARIES}")
+message(STATUS "Boost_VERSION: ${Boost_VERSION}")
+message(STATUS "Boost_LIB_VERSION: ${Boost_LIB_VERSION}")
+message(STATUS "Boost_MAJOR_VERSION: ${Boost_MAJOR_VERSION}")
+message(STATUS "Boost_MINOR_VERSION: ${Boost_MINOR_VERSION}")
+message(STATUS "Boost_SUBMINOR_VERSION: ${Boost_SUBMINOR_VERSION}")
+message(STATUS "Boost_LIB_DIAGNOSTIC_DEFINITIONS: ${Boost_LIB_DIAGNOSTIC_DEFINITIONS}")
+
 ## set include
 set(LIBZMQ_INCLUDEDIR "${SGLIB_ROOT}/${LIBZMQ_NAME}/include")
 set(CPPZMQ_INCLUDEDIR "${SGLIB_ROOT}/${CPPZMQ_NAME}/include")
@@ -36,7 +63,7 @@ else()
 endif()
 
 ## SG library
-set(SGLIB_INCLUDEDIR "${GSL_INCLUDEDIR};${FMT_INCLUDEDIR};${LIBZMQ_INCLUDEDIR};${CPPZMQ_INCLUDEDIR};${VLD_INCLUDEDIR}")
+set(SGLIB_INCLUDEDIR "${GSL_INCLUDEDIR};${FMT_INCLUDEDIR};${LIBZMQ_INCLUDEDIR};${CPPZMQ_INCLUDEDIR};${VLD_INCLUDEDIR};${Boost_INCLUDE_DIRS}")
 if (CMAKE_BUILD_TYPE STREQUAL "Debug")
 	set(SGLIB_LIBRARIES "${FMT_LIBDIR}/fmtd.lib;${LIBZMQ_DIR}/libzmq-sd.lib;${VLD_LIBDIR}/vld.lib")
 else()
@@ -66,3 +93,4 @@ add_subdirectory("4. Reliable Request-Reply Patterns/4.3 Majordomo Pattern")
 add_subdirectory("4. Reliable Request-Reply Patterns/4.3.1 Majordomo Pattern")
 add_subdirectory("4. Reliable Request-Reply Patterns/4.4 Asynchronous Majordomo Pattern")
 add_subdirectory("4. Reliable Request-Reply Patterns/4.5 Service Discovery")
+add_subdirectory("4. Reliable Request-Reply Patterns/4.6 Disconnected Reliability (Titanic Pattern)")
