--- a/zeromq/CMakeLists.txt
+++ b/zeromq/CMakeLists.txt
@@ -94,3 +94,4 @@ add_subdirectory("4. Reliable Request-Reply Patterns/4.3.1 Majordomo Pattern")
 add_subdirectory("4. Reliable Request-Reply Patterns/4.4 Asynchronous Majordomo Pattern")
 add_subdirectory("4. Reliable Request-Reply Patterns/4.5 Service Discovery")
 add_subdirectory("4. Reliable Request-Reply Patterns/4.6 Disconnected Reliability (Titanic Pattern)")
+add_subdirectory("4. Reliable Request-Reply Patterns/4.9 Brokerless Reliability (Freelance Pattern)")
