--- a/zeromq/4. Reliable Request-Reply Patterns/4.9 Brokerless Reliability (Freelance Pattern)/CMakeLists.txt
+++ b/zeromq/4. Reliable Request-Reply Patterns/4.9 Brokerless Reliability (Freelance Pattern)/CMakeLists.txt
@@ -2,9 +2,9 @@
 add_compile_definitions(ZMQ_STATIC) ## or #define ZMQ_STATIC beofre include zmq.hpp
 
 # client
-#add_executable(flclient1 "flclient1.cpp")
-#target_include_directories(flclient1 PRIVATE ${SGLIB_INCLUDEDIR})
-#target_link_libraries(flclient1 PRIVATE ${WINDOWS_LIBRARIES} ${SGLIB_LIBRARIES})
+add_executable(flclient1 "flclient1.cpp")
+target_include_directories(flclient1 PRIVATE ${SGLIB_INCLUDEDIR})
+target_link_libraries(flclient1 PRIVATE ${WINDOWS_LIBRARIES} ${SGLIB_LIBRARIES})
 
 # server
 add_executable(flserver1 "flserver1.cpp")
