Model Three: Complex and Nasty

--- a/zeromq/4. Reliable Request-Reply Patterns/4.9 Brokerless Reliability (Freelance Pattern)/CMakeLists.txt
+++ b/zeromq/4. Reliable Request-Reply Patterns/4.9 Brokerless Reliability (Freelance Pattern)/CMakeLists.txt
@@ -20,3 +20,13 @@ target_link_libraries(flclient2 PRIVATE ${WINDOWS_LIBRARIES} ${SGLIB_LIBRARIES})
 add_executable(flserver2 "flserver2.cpp")
 target_include_directories(flserver2 PRIVATE ${SGLIB_INCLUDEDIR})
 target_link_libraries(flserver2 PRIVATE ${WINDOWS_LIBRARIES} ${SGLIB_LIBRARIES})
+
+# client 3
+add_executable(flclient3 "flclient3.cpp" "flcapi.hpp")
+target_include_directories(flclient3 PRIVATE ${SGLIB_INCLUDEDIR})
+target_link_libraries(flclient3 PRIVATE ${WINDOWS_LIBRARIES} ${SGLIB_LIBRARIES})
+
+# server 3
+add_executable(flserver3 "flserver3.cpp")
+target_include_directories(flserver3 PRIVATE ${SGLIB_INCLUDEDIR})
+target_link_libraries(flserver3 PRIVATE ${WINDOWS_LIBRARIES} ${SGLIB_LIBRARIES})
