--- a/zeromq/CMakeLists.txt
+++ b/zeromq/CMakeLists.txt
@@ -12,6 +12,7 @@ set(FMT_NAME "fmt-7.1.3")
 set(LIBZMQ_NAME "libzmq-4.3.4")
 SET(CPPZMQ_NAME "cppzmq-4.7.1")
 SET(VLD_NAME "vld")
+SET(DATE_NAME "date-3.0.1")
 
 ##### saigonlib ROOT
 set(WINDOWS_LIBRARIES "Ws2_32.lib;IPHLPAPI.lib")
@@ -50,6 +51,7 @@ set(CPPZMQ_INCLUDEDIR "${SGLIB_ROOT}/${CPPZMQ_NAME}/include")
 set(GSL_INCLUDEDIR "${SGLIB_ROOT}/${GSL_NAME}/include")
 set(FMT_INCLUDEDIR "${SGLIB_ROOT}/${FMT_NAME}/include")
 set(VLD_INCLUDEDIR "${SGLIB_ROOT}/${VLD_NAME}/include")
+set(DATE_INCLUDEDIR "${SGLIB_ROOT}/${DATE_NAME}/include")
 
 ## set lib
 if (CMAKE_SIZEOF_VOID_P EQUAL 8)
@@ -63,7 +65,7 @@ else()
 endif()
 
 ## SG library
-set(SGLIB_INCLUDEDIR "${GSL_INCLUDEDIR};${FMT_INCLUDEDIR};${LIBZMQ_INCLUDEDIR};${CPPZMQ_INCLUDEDIR};${VLD_INCLUDEDIR};${Boost_INCLUDE_DIRS}")
+set(SGLIB_INCLUDEDIR "${GSL_INCLUDEDIR};${FMT_INCLUDEDIR};${LIBZMQ_INCLUDEDIR};${CPPZMQ_INCLUDEDIR};${VLD_INCLUDEDIR};${Boost_INCLUDE_DIRS};${DATE_INCLUDEDIR}")
 if (CMAKE_BUILD_TYPE STREQUAL "Debug")
 	set(SGLIB_LIBRARIES "${FMT_LIBDIR}/fmtd.lib;${LIBZMQ_DIR}/libzmq-sd.lib;${VLD_LIBDIR}/vld.lib")
 else()
