add zmqpp library for c++

--- a/zeromq/CMakeLists.txt
+++ b/zeromq/CMakeLists.txt
@@ -11,6 +11,7 @@ set(GSL_NAME "GSL-3.1.0")
 set(FMT_NAME "fmt-7.1.3")
 set(LIBZMQ_NAME "libzmq-4.3.4")
 SET(CPPZMQ_NAME "cppzmq-4.7.1")
+SET(ZMQPP_NAME "zmqpp-develop")
 SET(VLD_NAME "vld")
 SET(DATE_NAME "date-3.0.1")
 
@@ -52,24 +53,27 @@ set(GSL_INCLUDEDIR "${SGLIB_ROOT}/${GSL_NAME}/include")
 set(FMT_INCLUDEDIR "${SGLIB_ROOT}/${FMT_NAME}/include")
 set(VLD_INCLUDEDIR "${SGLIB_ROOT}/${VLD_NAME}/include")
 set(DATE_INCLUDEDIR "${SGLIB_ROOT}/${DATE_NAME}/include")
+set(ZMQPP_INCLUDEDIR "${SGLIB_ROOT}/${ZMQPP_NAME}/src")
 
 ## set lib
 if (CMAKE_SIZEOF_VOID_P EQUAL 8)
 	set(LIBZMQ_DIR "${SGLIB_ROOT}/${LIBZMQ_NAME}/lib/x64")
 	set(FMT_LIBDIR "${SGLIB_ROOT}/${FMT_NAME}/lib/x64")
 	set(VLD_LIBDIR "${SGLIB_ROOT}/${VLD_NAME}/lib/Win64")
+	set(ZMQPP_LIBDIR "${SGLIB_ROOT}/${ZMQPP_NAME}/lib/x64")
 else()
 	set(LIBZMQ_DIR "${SGLIB_ROOT}/${LIBZMQ_NAME}/lib/win32")
 	set(FMT_LIBDIR "${SGLIB_ROOT}/${FMT_NAME}/lib/win32")
 	set(VLD_LIBDIR "${SGLIB_ROOT}/${VLD_NAME}/lib/Win32")
+	set(ZMQPP_LIBDIR "${SGLIB_ROOT}/${ZMQPP_NAME}/lib/Win32")
 endif()
 
 ## SG library
-set(SGLIB_INCLUDEDIR "${GSL_INCLUDEDIR};${FMT_INCLUDEDIR};${LIBZMQ_INCLUDEDIR};${CPPZMQ_INCLUDEDIR};${VLD_INCLUDEDIR};${Boost_INCLUDE_DIRS};${DATE_INCLUDEDIR}")
+set(SGLIB_INCLUDEDIR "${GSL_INCLUDEDIR};${FMT_INCLUDEDIR};${LIBZMQ_INCLUDEDIR};${CPPZMQ_INCLUDEDIR};${VLD_INCLUDEDIR};${Boost_INCLUDE_DIRS};${DATE_INCLUDEDIR};${ZMQPP_INCLUDEDIR}")
 if (CMAKE_BUILD_TYPE STREQUAL "Debug")
-	set(SGLIB_LIBRARIES "${FMT_LIBDIR}/fmtd.lib;${LIBZMQ_DIR}/libzmq-sd.lib;${VLD_LIBDIR}/vld.lib")
+	set(SGLIB_LIBRARIES "${FMT_LIBDIR}/fmtd.lib;${LIBZMQ_DIR}/libzmq-staticd.lib;${VLD_LIBDIR}/vld.lib;${ZMQPP_LIBDIR}/zmqpp-staticd.lib")
 else()
-	set(SGLIB_LIBRARIES "${FMT_LIBDIR}/fmt.lib;${LIBZMQ_DIR}/libzmq-s.lib;${VLD_LIBDIR}/vld.lib")
+	set(SGLIB_LIBRARIES "${FMT_LIBDIR}/fmt.lib;${LIBZMQ_DIR}/libzmq-static.lib;${VLD_LIBDIR}/vld.lib;${ZMQPP_LIBDIR}/zmqpp-static.lib")
 endif()
 message(STATUS "SGLIB_INCLUDEDIR: ${SGLIB_INCLUDEDIR}")
 message(STATUS "SGLIB_LIBRARIES: ${SGLIB_LIBRARIES}")
