build and run ok => still don't work

--- a/zeromq/1-basic/hello-world/CMakeLists.txt
+++ b/zeromq/1-basic/hello-world/CMakeLists.txt
@@ -1,5 +1,5 @@
 # using static library of zero mq
-add_compile_definitions(ZMQ_STATIC) ## or #define ZMQ_STATIC beofre include zmq.hpp
+add_compile_definitions(ZMQ_STATIC ZMQPP_STATIC_DEFINE) ## or #define ZMQ_STATIC beofre include zmq.hpp
 
 # server
 add_executable(hwserver server.cpp)
@@ -10,3 +10,8 @@ target_link_libraries(hwserver PRIVATE ${WINDOWS_LIBRARIES} ${SGLIB_LIBRARIES})
 add_executable(hwclient "client.cpp")
 target_include_directories(hwclient PRIVATE ${SGLIB_INCLUDEDIR})
 target_link_libraries(hwclient PRIVATE ${WINDOWS_LIBRARIES} ${SGLIB_LIBRARIES})
+
+# zmqpp test
+add_executable(simple_client "simple_client.cpp")
+target_include_directories(simple_client PRIVATE ${SGLIB_INCLUDEDIR})
+target_link_libraries(simple_client PRIVATE ${WINDOWS_LIBRARIES} ${SGLIB_LIBRARIES})
