--- a/zeromq/CMakeLists.txt
+++ b/zeromq/CMakeLists.txt
@@ -53,7 +53,7 @@ set(GSL_INCLUDEDIR "${SGLIB_ROOT}/${GSL_NAME}/include")
 set(FMT_INCLUDEDIR "${SGLIB_ROOT}/${FMT_NAME}/include")
 set(VLD_INCLUDEDIR "${SGLIB_ROOT}/${VLD_NAME}/include")
 set(DATE_INCLUDEDIR "${SGLIB_ROOT}/${DATE_NAME}/include")
-set(ZMQPP_INCLUDEDIR "${SGLIB_ROOT}/${ZMQPP_NAME}/src")
+set(ZMQPP_INCLUDEDIR "${SGLIB_ROOT}/${ZMQPP_NAME}/include")
 
 ## set lib
 if (CMAKE_SIZEOF_VOID_P EQUAL 8)
