Last Value Caching => done

--- a/zeromq/CMakeLists.txt
+++ b/zeromq/CMakeLists.txt
@@ -103,3 +103,4 @@ add_subdirectory("4. Reliable Request-Reply Patterns/4.6 Disconnected Reliabilit
 add_subdirectory("4. Reliable Request-Reply Patterns/4.9 Brokerless Reliability (Freelance Pattern)")
 #
 add_subdirectory("5-Advanced Pub-Sub Patterns/5.1-Pub-Sub Tracing (Espresso Pattern)")
+add_subdirectory("5-Advanced Pub-Sub Patterns/5.2-Last Value Caching")
