--- a/zeromq/CMakeLists.txt
+++ b/zeromq/CMakeLists.txt
@@ -105,3 +105,4 @@ add_subdirectory("4. Reliable Request-Reply Patterns/4.9 Brokerless Reliability 
 add_subdirectory("5-Advanced Pub-Sub Patterns/5.1-Pub-Sub Tracing (Espresso Pattern)")
 add_subdirectory("5-Advanced Pub-Sub Patterns/5.2-Last Value Caching")
 add_subdirectory("5-Advanced Pub-Sub Patterns/5.3-Slow Subscriber Detection (Suicidal Snail Pattern)")
+add_subdirectory("5-Advanced Pub-Sub Patterns/5.4-Reliable Pub-Sub (Clone Pattern)")
